[gd_scene load_steps=7 format=3 uid="uid://dbur7qashbloa"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_fpatw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ncfgg"]
size = Vector2(18, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_tleov"]
radius = 324.891

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vefvm"]
size = Vector2(20, 9)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_3faaf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qeitd"]
size = Vector2(16, 1)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_fpatw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_ncfgg")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
visible = false
shape = SubResource("CircleShape2D_tleov")

[node name="PlayerHit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHit"]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_vefvm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, -4.5)
scale = Vector2(18, 9)
texture = SubResource("PlaceholderTexture2D_3faaf")

[node name="EnemyHit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHit"]
position = Vector2(0, -9.5)
shape = SubResource("RectangleShape2D_qeitd")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerHit" to="." method="_on_player_hurt_body_entered"]
[connection signal="body_exited" from="PlayerHit" to="." method="_on_player_hurt_body_exited"]
[connection signal="body_entered" from="EnemyHit" to="." method="_on_enemy_hit_body_entered"]
